--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
-@import "tailwindcss";
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import "tailwindcss";
 
 @layer base {
   * {
@@ -14,5 +14,8 @@
   }
   .scrollbar-hidden::-webkit-scrollbar {
     display: none;
+  }
+  .backgroundImage{
+    background-image: linear-gradient(#0000007e, #0000007e), url('/background_banner.jpg');
   }
 }
