--- a/src/index.css
+++ b/src/index.css
@@ -18,4 +18,7 @@
   .backgroundImage{
     background-image: linear-gradient(#0000007e, #0000007e), url('/background_banner.jpg');
   }
+  .nav-dark{
+    background: #141414;
+  }
 }
